Adjust inbox and notif page, adjust searchbar

--- a/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
+++ b/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
@@ -17,7 +17,7 @@
       <ion-col>
         <ion-card class="ion-no-border ion-no-margin">
           <ion-card-header class="ion-no-padding" *ngIf="bundling?.image_url">
-            <img [src]="bundling?.image_url" class="full-width img-header" />
+            <img [src]="bundling?.image_url" class="img-banner" />
           </ion-card-header>
 
           <ion-card-content class="ion-no-padding ion-text-left">
