--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -39,7 +39,7 @@
       </ion-col>
       <ion-col size="12">
         <ion-text color="medium">
-          <span class="text-address-detail">Jl. In Aja dulu no. 666</span>
+          <span class="text-address-detail">{{ defaultAddress?.address_detail }}</span>
         </ion-text>
       </ion-col>
     </ion-row>
