--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -59,9 +59,9 @@
         <app-home-categories></app-home-categories>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col class="divider"></ion-col>
-    </ion-row>
+    
+    <div class="divider"></div>
+    
     <ion-row *ngFor="let bundling of bundlings">
       <ion-col>
         <app-home-bundling [bundling]="bundling"></app-home-bundling>
@@ -72,9 +72,9 @@
         <app-home-brands></app-home-brands>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col class="divider"></ion-col>
-    </ion-row>
+
+    <div class="divider"></div>
+
     <ion-row class="ion-padding-bottom">
       <ion-col>
         <app-home-articles></app-home-articles>
