--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -25,3 +25,10 @@ img {
 .notif-icon {
   font-size: 25px;
 }
+
+.divider {
+  height: 8px;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+  background-color: #f5f5f5;
+}
