--- a/src/app/pages/my-order/my-order-list/my-order-list.component.scss
+++ b/src/app/pages/my-order/my-order-list/my-order-list.component.scss
@@ -1,3 +1,10 @@
 .slide-order {
   height: 92%;
 }
+
+ion-segment-button {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.17;
+  text-transform: capitalize;
+}
