--- a/src/global.scss
+++ b/src/global.scss
@@ -258,6 +258,10 @@ ion-searchbar.custom-search {
   padding-right: 0;
 }
 
+.ion-padding-bottom-small {
+  padding-bottom: 8px;
+}
+
 ion-button {
   --border-radius: 20px !important;
   text-transform: capitalize;
