--- a/src/app/pages/home/home-bundling/home-bundling.component.html
+++ b/src/app/pages/home/home-bundling/home-bundling.component.html
@@ -1,5 +1,5 @@
 <ion-row class="ion-padding">
-  <ion-col size="8">
+  <ion-col size="8" class="ion-padding-bottom-small">
     <ion-text class="section-title">{{ bundling.name }}</ion-text>
   </ion-col>
   <ion-col size="4" class="ion-text-right">
@@ -21,6 +21,5 @@
     <app-slide-product [products]="bundling.products"></app-slide-product>
   </ion-col>
 </ion-row>
-<ion-row>
-  <ion-col class="divider"></ion-col>
-</ion-row>
+
+<div class="divider"></div>
