--- a/src/app/pages/home/home-bundling/home-bundling.component.scss
+++ b/src/app/pages/home/home-bundling/home-bundling.component.scss
@@ -7,3 +7,10 @@
   height: 200px;
   object-fit: cover;
 }
+
+.divider {
+  height: 8px;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+  background-color: #f5f5f5;
+}
