--- a/src/app/pages/inbox/inbox-list/inbox-list.component.html
+++ b/src/app/pages/inbox/inbox-list/inbox-list.component.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar mode="ios">
+    <ion-buttons slot="start" mode="md" class="title">
+      <ion-back-button icon="chevron-back" defaultHref="/tabs/home"></ion-back-button>
+    </ion-buttons>
     <ion-title> {{ 'INBOX' | translate }} </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,22 +10,23 @@
 <ion-content>
   <ion-grid>
     <ion-row
-      *ngFor="let item of [1, 2, 3, 4, 5]"
+      *ngFor="let item of [1, 2, 3]"
       class="ion-padding-bottom link"
       [routerLink]="['/inbox', item, 'detail']"
     >
-      <ion-col size="3" class="ion-align-self-center">
+      <ion-col size="2" class="ion-align-self-center">
         <ion-thumbnail class="thumb-notif">
-          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" />
+          <img src="assets/images/inbox-logo.svg" />
         </ion-thumbnail>
       </ion-col>
-      <ion-col size="9">
+      <ion-col size="10">
         <ion-row>
           <ion-col size="12" class="ion-no-padding">
-            <ion-text class="notif-title"> Grocery shopping save IDR 120k off!</ion-text>
+            <ion-text class="notif-title">New Member Registration</ion-text>
           </ion-col>
           <ion-col size="12" class="ion-no-padding truncate">
-            <ion-text class="notif-desc"> Everything 20% off! Save up to 120k by shopping with us </ion-text>
+            <ion-text class="notif-desc">Thank you for registering at Klikgo. Please check your email for verification.
+            </ion-text>
           </ion-col>
           <ion-col size="12" class="ion-no-padding">
             <ion-text class="notif-time"> {{ currentDate | date: 'medium' }}</ion-text>
