--- a/src/app/pages/product/product-list/product-list.component.html
+++ b/src/app/pages/product/product-list/product-list.component.html
@@ -7,8 +7,8 @@
   </ion-toolbar>
   
   <ion-toolbar *ngIf="search" mode="ios">
-    <div (click)="searchProduct()" class="ion-padding-start">
-      <ion-searchbar class="custom-search" mode="ios" disabled [value]="search"></ion-searchbar>
+    <div (click)="searchProduct()">
+      <ion-searchbar class="custom-search" mode="ios" [value]="search"></ion-searchbar>
     </div>
   </ion-toolbar>
 
@@ -43,7 +43,7 @@
   </ion-grid>
 </ion-content>
 
-<ion-footer>
+<!-- <ion-footer>
   <ion-row class="padding-footer">
     <ion-col size="5.5" class="ion-text-center">
       <ion-text color="success" (click)="showSort()">
@@ -61,4 +61,4 @@
       </ion-text>
     </ion-col>
   </ion-row>
-</ion-footer>
+</ion-footer> -->
