--- a/src/app/pages/product/product-list/product-list.component.scss
+++ b/src/app/pages/product/product-list/product-list.component.scss
@@ -18,11 +18,10 @@
   padding-bottom: 5px;
 }
 
-.divider {
-  border: 0.5px solid var(--ion-color-success);
-  width: 1px;
-}
-
 ion-header {
   border: none;
+}
+
+.custom-search {
+  padding-left: 9px;
 }
