--- a/src/app/pages/product/product-search/product-search-with-keyword/product-search-with-keyword.component.html
+++ b/src/app/pages/product/product-search/product-search-with-keyword/product-search-with-keyword.component.html
@@ -1,6 +1,6 @@
-<ion-row class="ion-padding-bottom">
-  <ion-col size="9" class="ion-padding-start">
-    <ion-text class="search-title"> {{ 'RELATED_ITEMS' | translate }}</ion-text>
+<ion-row class="ion-padding-vertical">
+  <ion-col size="9" class="ion-padding-start ion-padding-bottom-small">
+    <ion-text class="search-title"> {{ 'SEARCH_RESULT' | translate }}</ion-text>
   </ion-col>
   <ion-col size="3" class="ion-text-right ion-padding-end">
     <ion-text class="section-see-all" (click)="goToProductList()">
