--- a/src/app/pages/product/product-search/product-search-with-keyword/product-search-with-keyword.component.scss
+++ b/src/app/pages/product/product-search/product-search-with-keyword/product-search-with-keyword.component.scss
@@ -1,9 +1,8 @@
 .search-title {
-  font-size: 14px;
-  font-weight: bold;
-  color: gray;
-}
-
-.section-see-all {
-  color: gray;
+  font-size: 12px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.2;
+  color: #353535;
 }
