--- a/src/app/pages/payment/payment-list/payment-list.component.html
+++ b/src/app/pages/payment/payment-list/payment-list.component.html
@@ -9,31 +9,32 @@
 <ion-content [fullscreen]="true">
   <ion-row class="ion-padding-horizontal">
     <ion-col size="12">
-      <ion-text>
+      <ion-text class="text-label">
         {{ 'TOTAL_PAYMENT' | translate }}
       </ion-text>
     </ion-col>
     <ion-col size="12">
-      <ion-text> Rp. 76.700 </ion-text>
+      <ion-text class="text-price"> Rp. 76.700 </ion-text>
     </ion-col>
   </ion-row>
+  <div class="divider"></div>
   <ion-list>
     <ion-radio-group>
       <ion-list-header>
-        <ion-label> {{ 'PAY_METHOD' | translate }} </ion-label>
+        <ion-label class="text-label"> {{ 'PAY_METHOD' | translate }} </ion-label>
       </ion-list-header>
 
       <ion-item lines="none">
-        <ion-label>{{ 'ONLINE_BANK' | translate }}</ion-label>
+        <ion-label class="text-label">{{ 'ONLINE_BANK' | translate }}</ion-label>
         <ion-radio value="online_bank" slot="start" color="success"></ion-radio>
       </ion-item>
       <ion-item lines="none">
-        <ion-label>{{ 'CASH_ON_DELIVERY' | translate }}</ion-label>
-        <ion-radio value="cod" slot="start" color="success"></ion-radio>
+        <ion-label class="text-label">{{ 'CASH_ON_DELIVERY' | translate }}</ion-label>
+        <ion-radio value="cod" slot="start" color="success" disabled></ion-radio>
       </ion-item>
       <ion-item lines="none">
-        <ion-label>{{ 'MANUAL_BANK_TRANSFER' | translate }}</ion-label>
-        <ion-radio value="manual_bank" slot="start" color="success"></ion-radio>
+        <ion-label class="text-label">{{ 'MANUAL_BANK_TRANSFER' | translate }}</ion-label>
+        <ion-radio value="manual_bank" slot="start" color="success" disabled></ion-radio>
       </ion-item>
     </ion-radio-group>
   </ion-list>
