--- a/src/app/pages/favorite/favorite-detail/favorite-detail.component.html
+++ b/src/app/pages/favorite/favorite-detail/favorite-detail.component.html
@@ -9,6 +9,17 @@
 
 <ion-content>
   <ion-list class="ion-padding">
+    <ion-item lines="none" *ngIf="productFavorites && productFavorites.length">
+      <ion-checkbox
+        slot="start"
+        color="limegreen"
+        class="product-checkbox"
+        [ngModel]="selectAll"
+        (ngModelChange)="toggleSelectAll()"
+      ></ion-checkbox>
+      <ion-label color="success" class="text-select-all">{{ 'SELECT_ALL' }}</ion-label>
+    </ion-item>
+
     <ion-item lines="none" *ngFor="let item of productFavorites; let i = index">
       <ion-checkbox
         slot="start"
@@ -37,7 +48,9 @@
             <ion-text class="product-size">Size: {{ item?.product?.weight }} {{ item?.product?.unit?.name }}</ion-text>
           </ion-col>
           <ion-col size="6" class="ion-text-right">
-            <ion-text class="product-final-price">Rp. {{ item?.product?.primary_price | number: '1.0-0':'id' }}</ion-text>
+            <ion-text class="product-final-price"
+              >Rp. {{ item?.product?.primary_price | number: '1.0-0':'id' }}</ion-text
+            >
           </ion-col>
         </ion-row>
         <!-- <ion-row>
