--- a/src/app/pages/payment/payment-list/payment-list.component.html
+++ b/src/app/pages/payment/payment-list/payment-list.component.html
@@ -30,11 +30,11 @@
       </ion-item>
       <ion-item lines="none">
         <ion-label class="text-label">{{ 'CASH_ON_DELIVERY' | translate }}</ion-label>
-        <ion-radio value="cod" slot="start" color="success" disabled></ion-radio>
+        <ion-radio value="cod" slot="start" color="success"></ion-radio>
       </ion-item>
       <ion-item lines="none">
         <ion-label class="text-label">{{ 'MANUAL_BANK_TRANSFER' | translate }}</ion-label>
-        <ion-radio value="manual_bank" slot="start" color="success" disabled></ion-radio>
+        <ion-radio value="manual_bank" slot="start" color="success"></ion-radio>
       </ion-item>
     </ion-radio-group>
   </ion-list>
