implement modal payment sent

--- a/src/app/pages/payment/payment-proof/payment-proof.component.html
+++ b/src/app/pages/payment/payment-proof/payment-proof.component.html
@@ -23,7 +23,7 @@
       <ion-col size="12" class="form-group ion-padding-bottom">
         <ion-label position="stacked">Payment Proof</ion-label>
       </ion-col>
-      <ion-col size="12" class="ion-text-center upload-field">
+      <ion-col size="12" class="ion-text-center upload-field" (click)="showActionSheet()">
         <div *ngIf="!selectedImage">
           <ion-icon name="image-outline" class="img-upload"></ion-icon>
           <br />
