--- a/src/app/pages/my-order/my-order-detail/my-order-detail.component.html
+++ b/src/app/pages/my-order/my-order-detail/my-order-detail.component.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons mode="md" class="ion-text-center">
       <ion-back-button defaultHref="/my-order" icon="chevron-back-outline"> </ion-back-button>
       <ion-title class="header-title center-with-back">{{ 'ORDER_DETAIL' | translate }}</ion-title>
@@ -16,7 +16,7 @@
           </ion-text>
           <br />
           <ion-text class="order-value">
-            {{ order?.order_id }}
+            {{ order?.transaction_code }}
           </ion-text>
         </ion-col>
         <ion-col class="ion-text-right">
@@ -25,7 +25,7 @@
           </ion-text>
           <br />
           <ion-text class="order-value">
-            {{ order?.order_date | date: 'd MMM yyyy HH:mm' }}
+            {{ order?.created_at | date: 'd MMM yyyy HH:mm' }}
           </ion-text>
         </ion-col>
       </ion-row>
@@ -37,7 +37,7 @@
           </ion-text>
           <br />
           <ion-text class="order-value">
-            {{ order?.order_status_name }}
+            {{ order?.transaction_status?.name | translate }}
           </ion-text>
         </ion-col>
         <ion-col class="ion-text-right">
@@ -45,11 +45,11 @@
             {{ 'TOTAL_PAYMENT' | translate }}
           </ion-text>
           <br />
-          <ion-text class="order-value" color="success"> Rp {{ order?.total_payment | number: '1.0-0' }} </ion-text>
+          <ion-text class="order-value price" color="success"> Rp {{ order?.total_price | number: '1.0-0' }} </ion-text>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col size="2.4" class="padding-status-col">
+        <!-- <ion-col size="2.4" class="padding-status-col">
           <div class="status-bg success center">
             <img src="assets/images/ic_waiting_for_payment.svg" class="status-img" />
           </div>
@@ -89,13 +89,21 @@
           <div class="status-bg center">
             <img src="assets/images/ic_completed.svg" class="status-img" />
           </div>
+        </ion-col> -->
+        <ion-col size="2.4" class="padding-status-col" *ngFor="let status of transactionStatus">
+
         </ion-col>
       </ion-row>
 
       <ion-row>
-        <ion-col size="2.4" class="padding-status-col ion-text-center">
+        <ion-col size="2.4" class="padding-status-col ion-text-center" *ngFor="let status of transactionStatus">
           <ion-text class="order-status">
-            {{ 'WAITING_FOR_PAYMENT' | translate }}
+            {{ status?.name | translate }}
+          </ion-text>
+        </ion-col>
+        <!-- <ion-col size="2.4" class="padding-status-col ion-text-center">
+          <ion-text class="order-status">
+            {{ 'WAITING_PAYMENT' | translate }}
           </ion-text>
         </ion-col>
         <ion-col size="2.4" class="padding-status-col ion-text-center">
@@ -105,7 +113,7 @@
         </ion-col>
         <ion-col size="2.4" class="padding-status-col ion-text-center">
           <ion-text class="order-status">
-            {{ 'ORDER_IN_PROCESS' | translate }}
+            {{ 'IN_PROCESS' | translate }}
           </ion-text>
         </ion-col>
         <ion-col size="2.4" class="padding-status-col ion-text-center">
@@ -117,7 +125,7 @@
           <ion-text class="order-status">
             {{ 'ORDER_COMPLETED' | translate }}
           </ion-text>
-        </ion-col>
+        </ion-col> -->
       </ion-row>
     </ion-card-content>
   </ion-card>
@@ -125,13 +133,13 @@
     <ion-card-content>
       <ion-row>
         <ion-col size="5">
-          <ion-text>
+          <ion-text class="order-label">
             {{ 'PAYMENT_METHOD' | translate }}
           </ion-text>
         </ion-col>
         <ion-col size="7" class="ion-text-right">
-          <ion-text>
-            {{ order?.order_payment_method }}
+          <ion-text class="order-value">
+            {{ order?.payment_method?.name }}
           </ion-text>
         </ion-col>
       </ion-row>
@@ -142,12 +150,12 @@
     <ion-card-content>
       <ion-row>
         <ion-col>
-          <ion-text> {{ 'ORDER_DETAIL' | translate }}</ion-text>
+          <ion-text class="order-label"> {{ 'ORDER_DETAIL' | translate }}</ion-text>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <app-item-list [showSubstract]="false" [cartData]="itemList"></app-item-list>
+          <app-item-list [showSubstract]="false" [cartData]="order?.products"></app-item-list>
         </ion-col>
       </ion-row>
       <ion-row>
@@ -197,7 +205,7 @@
           </ion-text>
         </ion-col>
         <ion-col size="6" class="ion-text-right">
-          <ion-text class="summary-value"> Rp. 70.000 </ion-text>
+          <ion-text class="summary-value">{{ order?.original_price | currency: 'Rp. ':'symbol':'1.0-0' }}</ion-text>
         </ion-col>
       </ion-row>
     </ion-card-content>
@@ -207,36 +215,34 @@
     <ion-card-content>
       <ion-row>
         <ion-col>
-          <ion-text>
+          <ion-text class="order-label">
             {{ 'RECIPIENT_ADDRESS' | translate }}
           </ion-text>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-text> Name </ion-text>
+          <ion-text class="text-address-info">{{ order?.address?.address_name }} </ion-text>
           <br />
-
-          <ion-text> Address </ion-text>
+          <ion-text class="address-label">{{ order?.address?.address_detail }}</ion-text>
           <br />
-
-          <ion-text> Phone </ion-text>
+          <ion-text class="address-label"> {{ order?.address?.phone }} </ion-text>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-text>
+          <ion-text class="order-label">
             {{ 'ESTIMATED_ARRIVAL' | translate }}
           </ion-text>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-text>
-            {{ order?.order_date | date: 'EEEE, d MMM yyyy' }}
+          <ion-text class="order-delivery-date">
+            {{ order?.created_at | date: 'EEEE, d MMM yyyy' }}
           </ion-text>
           <br />
-          <ion-text> 12:00 - 14:00 </ion-text>
+          <ion-text class="order-delivery-date"> 12:00 - 14:00 </ion-text>
         </ion-col>
       </ion-row>
     </ion-card-content>
