--- a/src/app/pages/my-order/my-order-detail/my-order-detail.component.scss
+++ b/src/app/pages/my-order/my-order-detail/my-order-detail.component.scss
@@ -55,3 +55,91 @@
   padding-left: 0;
   padding-right: 0;
 }
+
+.order-label {
+  font-size: 10px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.2;
+  letter-spacing: normal;
+  color: #353535;
+}
+
+.address-label {
+  font-size: 10px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.2;
+  letter-spacing: normal;
+  color: #707070;
+}
+
+.order-value {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.17;
+  letter-spacing: normal;
+  color: #353535;
+
+  &.price {
+    color: #99cc33;
+    font-weight: 700;
+  }
+}
+
+.btn-action {
+  text-transform: capitalize;
+}
+
+ion-button {
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 1.2;
+  --padding-top: 8px;
+  --padding-bottom: 8px;
+}
+
+.order-status {
+  font-size: 8px;
+  font-weight: 600;
+  color: #353535;
+}
+
+.order-delivery-date {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.33;
+  color: #353535;
+}
+
+.text{
+  &-address-info {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.17;
+    color: #353535;
+  }
+  &-address-detail {
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.33;
+    letter-spacing: normal;
+    color: #353535;
+  }
+  &-payment-info {
+    font-size: 14px;
+    line-height: 1.17;
+    letter-spacing: normal;
+    color: #353535;
+  }
+  &-payment-price {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.17;
+    color: #353535;
+  }
+}
