--- a/src/app/shared/common/item-list/item-list.component.scss
+++ b/src/app/shared/common/item-list/item-list.component.scss
@@ -42,6 +42,7 @@
     text-overflow: ellipsis;
     vertical-align: super;
     color: #f8a345;
+    text-decoration: line-through;
   }
   &-final-price {
     font-size: 14px;
