Add favorite delete flow

--- a/src/app/pages/favorite/favorite-detail/favorite-detail.component.scss
+++ b/src/app/pages/favorite/favorite-detail/favorite-detail.component.scss
@@ -39,6 +39,9 @@
     text-overflow: ellipsis;
     vertical-align: super;
     color: #f8a345;
+    &.strikethrough {
+      text-decoration: line-through;
+    }
   }
   &-final-price {
     font-size: 14px;
