--- a/src/app/pages/favorite/favorite-detail/favorite-detail.component.html
+++ b/src/app/pages/favorite/favorite-detail/favorite-detail.component.html
@@ -8,16 +8,21 @@
 </ion-header>
 
 <ion-content>
-  <ion-list class="ion-padding">
+  <ion-list>
     <ion-item lines="none" *ngIf="productFavorites && productFavorites.length">
-      <ion-checkbox
+      <!-- <ion-checkbox
         slot="start"
         color="limegreen"
         class="product-checkbox"
         [ngModel]="selectAll"
         (ngModelChange)="toggleSelectAll()"
-      ></ion-checkbox>
-      <ion-label color="success" class="text-select-all">{{ 'SELECT_ALL' }}</ion-label>
+      ></ion-checkbox> -->
+      <!-- <ion-label color="success" class="text-select-all">{{ 'SELECT_ALL' | translate }}</ion-label> -->
+      <ion-button color="limegreen" fill="clear" class="ion-no-padding" (click)="toggleSelectAll()">
+        <ion-text>
+          <b>{{ 'SELECT_ALL' | translate }}</b>
+        </ion-text>
+      </ion-button>
     </ion-item>
 
     <ion-item lines="none" *ngFor="let item of productFavorites; let i = index">
@@ -38,21 +43,31 @@
         />
       </ion-thumbnail>
       <ion-grid class="ion-align-self-start">
-        <ion-row>
-          <ion-col size="12" class="truncate">
-            <ion-text class="product-name">{{ item?.product?.name }}</ion-text>
+        <ion-row class="ion-align-items-center">
+          <ion-col size="9">
+            <ion-row>
+              <ion-col size="12" class="truncate">
+                <ion-text class="product-name">{{ item?.product?.name }}</ion-text>
+              </ion-col>
+              <ion-col size="12" class="ion-no-padding-top">
+                <div>
+                  <ion-text class="product-price strikethrough">
+                    {{ item?.product?.secondary_price || item?.secondary_price | currency: 'Rp. ':'symbol':'1.0-0' }}
+                  </ion-text>
+                </div>
+                <ion-text class="product-final-price">
+                  Rp. {{ item?.product?.primary_price | number: '1.0-0':'id' }}</ion-text
+                >
+              </ion-col>
+            </ion-row>
+            <ion-row> </ion-row>
+          </ion-col>
+          <ion-col size="3" class="ion-text-right" style="z-index: 99;" (click)="delete(item);$event.stopPropagation()">
+            <ion-icon name="trash" color="danger" style="font-size: 25px;">
+            </ion-icon>
           </ion-col>
         </ion-row>
-        <ion-row>
-          <ion-col size="6">
-            <ion-text class="product-size">Size: {{ item?.product?.weight }} {{ item?.product?.unit?.name }}</ion-text>
-          </ion-col>
-          <ion-col size="6" class="ion-text-right">
-            <ion-text class="product-final-price"
-              >Rp. {{ item?.product?.primary_price | number: '1.0-0':'id' }}</ion-text
-            >
-          </ion-col>
-        </ion-row>
+
         <!-- <ion-row>
           <ion-col>
             <ion-text class="product-price-with-unit">
