Add out of stock product, fix description on home bundling

--- a/src/app/pages/my-order/my-order-list/my-order-list.component.html
+++ b/src/app/pages/my-order/my-order-list/my-order-list.component.html
@@ -32,7 +32,7 @@
         <ion-grid>
           <ion-row *ngFor="let order of completedOrders">
             <ion-col>
-              <app-card-order></app-card-order>
+              <app-card-order [order]="order"></app-card-order>
             </ion-col>
           </ion-row>
         </ion-grid>
