--- a/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
+++ b/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
@@ -2,8 +2,8 @@
   <ion-toolbar mode="ios">
     <ion-buttons mode="md" class="ion-text-center">
       <ion-back-button icon="chevron-back" defaultHref="/tabs/home" icon="chevron-back-outline"> </ion-back-button>
-      <ion-title class="header-title">{{ bundling?.name }}</ion-title>
     </ion-buttons>
+    <ion-title class="header-title">{{ bundling?.name }}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="searchProduct()">
         <ion-icon name="search" class="header-action-size"></ion-icon>
@@ -12,8 +12,8 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
-  <ion-grid>
-    <ion-row>
+  <ion-grid class="ion-no-padding">
+    <ion-row class="ion-no-padding">
       <ion-col>
         <ion-card class="ion-no-border ion-no-margin">
           <ion-card-header class="ion-no-padding" *ngIf="bundling?.image_url">
@@ -21,7 +21,7 @@
           </ion-card-header>
 
           <ion-card-content class="ion-no-padding ion-text-left">
-            <ion-row class="ion-padding-top">
+            <ion-row class="ion-padding-horizontal ion-padding-top">
               <ion-col size="12" class="truncate">
                 <ion-text class="bundling-title">{{ bundling?.name }} </ion-text>
               </ion-col>
@@ -36,7 +36,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="4" *ngFor="let item of products">
+      <ion-col size="4" class="ion-padding-horizontal" *ngFor="let item of products">
         <app-card-product [product]="item"></app-card-product>
       </ion-col>
     </ion-row>
