--- a/src/app/pages/home/home-bundling/home-bundling.component.html
+++ b/src/app/pages/home/home-bundling/home-bundling.component.html
@@ -8,7 +8,7 @@
     </ion-text>
   </ion-col>
   <ion-col size="12">
-    <ion-text class="section-desc">{{ 'FRESH_GROCERIES_DESC' | translate }}</ion-text>
+    <ion-text class="section-desc">{{ bundling?.description }}</ion-text>
   </ion-col>
 </ion-row>
 <ion-row class="ion-no-padding" *ngIf="bundling.image_url">
