--- a/src/app/pages/my-order/my-order-detail/my-order-detail.component.html
+++ b/src/app/pages/my-order/my-order-detail/my-order-detail.component.html
@@ -50,93 +50,29 @@
       </ion-row>
       <ion-row>
 
-
-        <!-- <ion-col size="2.4" class="padding-status-col">
-          <div class="status-bg success center">
-            <img src="assets/images/ic_waiting_for_payment.svg" class="status-img" />
-          </div>
-
-          <div class="status-line-right success"></div>
-        </ion-col>
-        
-        <ion-col size="2.4" class="padding-status-col">
-          <div class="status-line success"></div>
-
-          <div class="status-bg center">
-            <img src="assets/images/ic_waiting_for_confirm.svg" class="status-img" />
-          </div>
-
-          <div class="status-line-right"></div>
-        </ion-col>
-        <ion-col size="2.4" class="padding-status-col">
-          <div class="status-line"></div>
-
-          <div class="status-bg center">
-            <img src="assets/images/ic_waiting_for_payment.svg" class="status-img" />
-          </div>
-
-          <div class="status-line-right"></div>
-        </ion-col>
-        <ion-col size="2.4" class="padding-status-col">
-          <div class="status-line"></div>
-
-          <div class="status-bg center">
-            <img src="assets/images/ic_order_sent.svg" class="status-img" />
-          </div>
-
-          <div class="status-line-right"></div>
-        </ion-col>
-        <ion-col size="2.4" class="padding-status-col">
-          <div class="status-line"></div>
-
-          <div class="status-bg center">
-            <img src="assets/images/ic_completed.svg" class="status-img" />
-          </div>
-        </ion-col> -->
-
-        
-        <ion-col size="2.4" class="padding-status-col" *ngFor="let status of transactionStatus; let i = index">
-          <div [ngClass]="{'status-line' : i!=0 }"></div>
+        <ion-col size="{{12/ transactionStatus?.length}}" class="padding-status-col"
+          *ngFor="let status of transactionStatus; let i = index">
+          <div [ngClass]="{'status-line' : i!=0 , 'green': status?.active }"></div>
           <!-- [ngClass]="{'status-line-right': i == 0 && i == transactionStatus.length - 1}" -->
           <div class="status-bg center">
-            <img src="{{ 'assets/images/' + status?.name + '.svg' }}" class="status-img" />
+            <img src="{{ 'assets/images/' + status?.name + '.svg' }}" class="status-img"
+              [ngClass]="{'green' :status?.active}" />
           </div>
 
-          <div [ngClass]="{'status-line-right': i != transactionStatus.length - 1}"></div>
+          <div
+            [ngClass]="{'status-line-right': i != transactionStatus.length - 1, 'green': transactionStatus[i+1]?.active == true }">
+          </div>
         </ion-col>
       </ion-row>
 
       <ion-row>
-        <ion-col size="2.4" class="padding-status-col ion-text-center" *ngFor="let status of transactionStatus">
+        <ion-col size="{{12/ transactionStatus?.length}}" class="padding-status-col ion-text-center"
+          *ngFor="let status of transactionStatus">
           <ion-text class="order-status" [ngClass]="{'green': status?.active}">
             {{ status?.name | translate }}
           </ion-text>
         </ion-col>
-        <!-- <ion-col size="2.4" class="padding-status-col ion-text-center">
-          <ion-text class="order-status">
-            {{ 'WAITING_PAYMENT' | translate }}
-          </ion-text>
-        </ion-col>
-        <ion-col size="2.4" class="padding-status-col ion-text-center">
-          <ion-text class="order-status">
-            {{ 'WAITING_FOR_CONFIRMATION' | translate }}
-          </ion-text>
-        </ion-col>
-        <ion-col size="2.4" class="padding-status-col ion-text-center">
-          <ion-text class="order-status">
-            {{ 'IN_PROCESS' | translate }}
-          </ion-text>
-        </ion-col>
-        <ion-col size="2.4" class="padding-status-col ion-text-center">
-          <ion-text class="order-status">
-            {{ 'ORDER_SENT' | translate }}
-          </ion-text>
-        </ion-col>
-        <ion-col size="2.4" class="padding-status-col ion-text-center">
-          <ion-text class="order-status">
-            {{ 'ORDER_COMPLETED' | translate }}
-          </ion-text>
-        </ion-col> -->
+
       </ion-row>
     </ion-card-content>
   </ion-card>
@@ -150,7 +86,7 @@
         </ion-col>
         <ion-col size="7" class="ion-text-right">
           <ion-text class="order-value">
-            {{ order?.payment_method?.name }}
+            {{ order?.payment_method?.name | translate }}
           </ion-text>
         </ion-col>
       </ion-row>
@@ -217,7 +153,8 @@
           </ion-text>
         </ion-col>
         <ion-col size="6" class="ion-text-right">
-          <ion-text color="success" class="summary-value green">- {{ order?.voucher_discount + order?.product_discount | currency: 'Rp. ':'symbol':'1.0-0' }} </ion-text>
+          <ion-text color="success" class="summary-value green">-
+            {{ order?.voucher_discount + order?.product_discount | currency: 'Rp. ':'symbol':'1.0-0' }} </ion-text>
         </ion-col>
       </ion-row>
       <div class="divider"></div>
@@ -271,7 +208,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-row class="ion-padding">
+  <ion-row class="ion-padding" *ngIf="order?.transaction_status?.transaction_status_id == 1">
     <ion-col>
       <ion-button color="success" shape="round" expand="block" (click)="uploadProof()">
         {{ 'UPLOAD_PAYMENT_PROOF' | translate }}
