--- a/src/app/pages/notification/notification-list/notification-list.component.scss
+++ b/src/app/pages/notification/notification-list/notification-list.component.scss
@@ -7,7 +7,7 @@
 
 .notif-title {
   font-size: 14px;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .notif-desc {
@@ -17,4 +17,15 @@
 .notif-time {
   font-size: 12px;
   color: gray;
+}
+
+.slide-order {
+  height: 92%;
+}
+
+ion-segment-button {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.17;
+  text-transform: capitalize;
 }
